re adding button back

--- a/sources.html
+++ b/sources.html
@@ -29,6 +29,9 @@
       <section class="card" aria-labelledby="sources-title">
         <div class="card-content">
           <h2 id="sources-title" class="section-title"><span class="dot"></span>Sources</h2>
+          <div class="control-row" style="margin: 8px 0 12px;">
+            <button id="view-all-btn" class="button" type="button" style="margin-left:auto;">View all meets</button>
+          </div>
           <div id="sources-grid" class="grid" role="list"></div>
         </div>
       </section>
