--- a/index.html
+++ b/index.html
@@ -28,9 +28,34 @@
 
   <main>
     <div class="top-right">
-      <a class="button top-link" href="sources.html">Data sources</a>
-      <a class="button top-link" href="https://github.com/billpottle/colorado-masters-race-project/commits/main/" target="_blank" rel="noopener noreferrer">Recent changes</a>
-      <button id="submit-missing-btn" class="button top-link" type="button">Submit missing time</button>
+      <a class="button top-link" href="sources.html">
+        <span class="icon" aria-hidden="true">
+          <svg viewBox="0 0 24 24" width="16" height="16" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M12 3l9 5-9 5-9-5 9-5z"/>
+            <path d="M3 12l9 5 9-5"/>
+            <path d="M3 17l9 5 9-5"/>
+          </svg>
+        </span>
+        <span>Data sources</span>
+      </a>
+      <a class="button top-link" href="https://github.com/billpottle/colorado-masters-race-project/commits/main/" target="_blank" rel="noopener noreferrer">
+        <span class="icon" aria-hidden="true">
+          <svg viewBox="0 0 24 24" width="16" height="16" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <circle cx="12" cy="12" r="9"/>
+            <path d="M12 7v5l3 3"/>
+          </svg>
+        </span>
+        <span>Recent changes</span>
+      </a>
+      <button id="submit-missing-btn" class="button top-link" type="button">
+        <span class="icon" aria-hidden="true">
+          <svg viewBox="0 0 24 24" width="16" height="16" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M12 5v14"/>
+            <path d="M5 12h14"/>
+          </svg>
+        </span>
+        <span>Submit missing time</span>
+      </button>
     </div>
     <section class="card" aria-labelledby="overview-title">
       <div class="card-content">
