--- a/index.html
+++ b/index.html
@@ -38,15 +38,6 @@
         </span>
         <span>Data sources</span>
       </a>
-      <a class="button top-link" href="https://github.com/billpottle/colorado-masters-race-project/commits/main/" target="_blank" rel="noopener noreferrer">
-        <span class="icon" aria-hidden="true">
-          <svg viewBox="0 0 24 24" width="16" height="16" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-            <circle cx="12" cy="12" r="9"/>
-            <path d="M12 7v5l3 3"/>
-          </svg>
-        </span>
-        <span>Recent changes</span>
-      </a>
       <button id="submit-missing-btn" class="button top-link" type="button">
         <span class="icon" aria-hidden="true">
           <svg viewBox="0 0 24 24" width="16" height="16" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -137,6 +128,7 @@
           <select id="event-select" class="input" style="min-width: 260px;">
             <option value="" selected disabled>Select an event…</option>
           </select>
+          <button id="clear-filters" class="button" type="button" style="margin-left:auto;">Clear filters</button>
         </div>
         <div id="age-leaderboard" class="age-grid"></div>
 
@@ -218,7 +210,7 @@
         <p style="margin: 6px 0 10px; color: var(--muted);">
           This dataset has been compiled by volunteers on a 'best efforts' basis. If you have a performance that we are missing,
           please send an email to
-          <a class="inline-link" href="mailto:colorado-masters-race-project@billpottle.com?subject=Missing%20performance%20submission">colorado-masters-race-project@billpottle.com</a>
+          <a class="inline-link" href="mailto:ColoMastersRecords@gmail.com?subject=Missing%20performance%20submission">colorado-masters-race-project@billpottle.com</a>
           with the following information:
         </p>
         <ul style="margin: 0 0 10px 16px; padding: 0;">
