changing section title

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
     <section class="card" aria-labelledby="search-title" style="margin-top: 20px;">
       <div class="card-content">
-        <h2 id="search-title" class="section-title"><span class="dot"></span>Check your results</h2>
+        <h2 id="search-title" class="section-title"><span class="dot"></span>Individual results</h2>
         <div class="search-row">
           <input id="search-input" class="input" type="text" placeholder="Enter name (e.g., Jane Doe)" />
           <button id="search-btn" class="button" type="button">Search</button>
