--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         <p style="margin: 6px 0 10px; color: var(--muted);">
           This dataset has been compiled by volunteers on a 'best efforts' basis. If you have a performance that we are missing,
           please send an email to
-          <a class="inline-link" href="mailto:ColoMastersRecords@gmail.com?subject=Missing%20performance%20submission">colorado-masters-race-project@billpottle.com</a>
+          <a class="inline-link" href="mailto:colorado-masters-race-project@billpottle.com?subject=Missing%20performance%20submission">colorado-masters-race-project@billpottle.com</a>
           with the following information:
         </p>
         <ul style="margin: 0 0 10px 16px; padding: 0;">
