adding bulk submission

--- a/index.html
+++ b/index.html
@@ -224,6 +224,20 @@
           Any proof you can provide such as a link to official meet results, video recordings, scans of paper results or awards,
           newspaper clippings, etc will be appreciated so that we can add in the missing time.
         </p>
+
+        <p style="margin: 10px 0 0; color: var(--muted);">
+          If you have many missing results to submit, if would be very helpful if you could submit a CSV or Excel file in the following format:
+        </p>
+        <p style="margin: 10px 0 0; color: var(--muted);">
+          Columns:
+          Name (firstname lastname), 
+          Time (MM:SS.t), 
+          Age (numeric year (preferred), or division (eg 35-39)),
+          Meet Name,
+          Date (MM/DD/YYYY),
+          Gender (male or female),
+          Event (100m, 200m, 400m, 800m, 1500m, 3000m, 5000m, 1600m, 1 mile, 3000m steeplechase)
+        </p>
       </div>
     </div>
   </section>
