--- a/index.html
+++ b/index.html
@@ -226,18 +226,17 @@
         </p>
 
         <p style="margin: 10px 0 0; color: var(--muted);">
-          If you have many missing results to submit, if would be very helpful if you could submit a CSV or Excel file in the following format:
+          If you have many missing results to submit, it would be very helpful to send a CSV or Excel file using the following columns (in order):
         </p>
-        <p style="margin: 10px 0 0; color: var(--muted);">
-          Columns:
-          Name (firstname lastname), 
-          Time (MM:SS.t), 
-          Age (numeric year (preferred), or division (eg 35-39)),
-          Meet Name,
-          Date (MM/DD/YYYY),
-          Gender (male or female),
-          Event (100m, 200m, 400m, 800m, 1500m, 3000m, 5000m, 1600m, 1 mile, 3000m steeplechase)
-        </p>
+        <ul style="margin: 6px 0 10px 16px; padding: 0;">
+          <li><strong>Name</strong> — firstname lastname</li>
+          <li><strong>Time</strong> — MM:SS.t (e.g., 4:12.3)</li>
+          <li><strong>Age</strong> — numeric age (preferred), or division (e.g., 35-39)</li>
+          <li><strong>Meet Name</strong></li>
+          <li><strong>Date</strong> — MM/DD/YYYY</li>
+          <li><strong>Gender</strong> — male or female</li>
+          <li><strong>Event</strong> — 100m, 200m, 400m, 800m, 1500m, 3000m, 5000m, 1600m, 1 mile, 3000m steeplechase</li>
+        </ul>
       </div>
     </div>
   </section>
