adding not verified

--- a/index.html
+++ b/index.html
@@ -171,6 +171,9 @@
             <div class="hist-axis"></div>
           </div>
         </div>
+        <div class="footer-note" style="margin-top: 10px;">
+          * indicates a time not verified with official sources.
+        </div>
       </div>
     </section>
 
