adding landing page

--- a/sources.html
+++ b/sources.html
@@ -21,7 +21,7 @@
       <h1 class="title">Data Sources</h1>
       <p class="subtitle">Where our race data comes from. We will be adding more sources as the project progresses.</p>
       <div class="header-actions">
-        <a class="button" href="index.html" aria-label="Back to main">← Back to main</a>
+        <a class="button" href="database.html" aria-label="Back to database">← Back to database</a>
       </div>
     </header>
 
@@ -308,5 +308,3 @@
     </script>
   </body>
   </html>
-
-
